--- a/platform/windows/godot_res.rc
+++ b/platform/windows/godot_res.rc
@@ -16,13 +16,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName",            "Godot Engine"
+            VALUE "CompanyName",            "Tekisasu"
             VALUE "FileDescription",        VERSION_NAME
             VALUE "FileVersion",            VERSION_NUMBER
             VALUE "ProductName",            VERSION_NAME
-            VALUE "Licence",                "MIT"
-            VALUE "LegalCopyright",         "Copyright (c) 2007-" _MKSTR(VERSION_YEAR) " Juan Linietsky, Ariel Manzur and contributors"
-            VALUE "Info",                   "https://godotengine.org"
+            VALUE "Licence",                "Proprietary"
+            VALUE "LegalCopyright",         "Copyright (c) 2021-2023 Tekisasu, Copyright (c) 2007-" _MKSTR(VERSION_YEAR) " Juan Linietsky, Ariel Manzur and contributors"
+            VALUE "Info",                   "https://dev.tekisasu.com"
             VALUE "ProductVersion",         VERSION_FULL_BUILD
         END
     END
